--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -414,8 +414,8 @@
     "field_student": "Alumno",
     "field_student_id": "Identificación del Estudiante",
     "field_student_photo": "Foto del estudiante",
-    "field_subject": "Curso",
-    "field_subject_type": "Tipo de curso",
+    "field_subject": "Asignatura",
+    "field_subject_type": "Tipo de asignatura",
     "field_submission": "Envío",
     "field_subtitle": "Subtítulo",
     "field_supplier": "Proveedor",
@@ -629,7 +629,7 @@
     "module_student_subject_report": "Reporte de asignaturas",
     "module_student_transfer": "Transferencia de estudiantes",
     "module_study_material": "Materiales de estudio",
-    "module_subject": "Cursos",
+    "module_subject": "Asignaturas",
     "module_subject_adddrop": "Curso Agregar Descenso",
     "module_subject_marking": "Libro mayor de marcas de curso",
     "module_subject_result": "Resultados del curso",
@@ -741,6 +741,8 @@
     "step": "Paso",
     "subject_type_compulsory": "Obligatorio",
     "subject_type_optional": "Opcional",
+    "subject_type_elective": "Electiva",
+    "subject_type_flex": "Flexible",
     "tab_account_update": "Actualización de cuenta",
     "tab_bank_info": "Información bancaria",
     "tab_basic_info": "Información básica",
@@ -761,6 +763,17 @@
     "field_plan_estudios": "Plan de estudios",
     "field_title_get":"Titulo a obtener",
     "field_code_snies":"Codigo SNIES",
-    "field_validity_stydy_init":"Vigencia inicial",
-    "field_validity_stydy_end":"Vigencial final"
+    "validity_init":"Vigencia inicial",
+    "validity_end":"Vigencial final",
+
+    "field_intensity":"Intensidad",
+    "theoretical_unit":"Unidad teorica",
+    "practical_unit":"Unidad practica",
+    "minimum_note":"Nota minima",
+    "maximum_note":"Nota maxima",
+    "passing_grade":"Nota aprobatoria",
+    "homologable":"Homologable",
+    "minimum_grade_approved":"Nota mínima homologable",
+    "field_start":"Inicia",
+    "field_ends":"Termina"
 }
